--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -43,6 +43,7 @@
 }
 
 .home-text h1 {
+  font-family: "Play", sans-serif;
   font-size: 5rem;
   font-weight: 900;
   line-height: 1.2;
@@ -55,6 +56,7 @@
 }
 
 .home-text p {
+  font-family: "Play", sans-serif;
   font-size: 1.5rem;
   margin-bottom: 30px;
   line-height: 1.6;
